// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`__AttributeValueContent Should render empty text attribute 1`] = `
<td
  className="ta-component abc-resource-view__attribute-value-content"
  data-lego="react"
  style={Object {}}
>
  <abc-resource-view__attribute-value
    key="value"
  />
  <abc-resource-view__empty
    key="empty"
    mix={
      Object {
        "block": "abc-resource-view",
        "elem": "null",
      }
    }
  />
</td>
`;

exports[`__AttributeValueContent Should render json attribute 1`] = `
<td
  className="ta-component abc-resource-view__attribute-value-content"
  data-lego="react"
  style={Object {}}
>
  <abc-resource-view__attribute-value
    key="value"
  >
    {
    "foo": "bar"
}
  </abc-resource-view__attribute-value>
  <ta-clipboard
    key="clipboard"
    mix={
      Object {
        "block": "abc-resource-view",
        "elem": "clipboard",
      }
    }
    scope={[Function]}
    text="{
    \\"foo\\": \\"bar\\"
}"
  />
</td>
`;

exports[`__AttributeValueContent Should render link attribute 1`] = `
<td
  className="ta-component abc-resource-view__attribute-value-content"
  data-lego="react"
  style={Object {}}
>
  <abc-resource-view__attribute-value
    key="value"
  >
    <link
      onClick={[Function]}
      tabIndex="0"
      target="_blank"
      theme="normal"
      url="/foobar"
    >
      test
    </link>
  </abc-resource-view__attribute-value>
  <ta-clipboard
    key="clipboard"
    mix={
      Object {
        "block": "abc-resource-view",
        "elem": "clipboard",
      }
    }
    scope={[Function]}
    text="test"
    zIndexGroupLevel={26}
  />
</td>
`;

exports[`__AttributeValueContent Should render text attribute 1`] = `
<td
  className="ta-component abc-resource-view__attribute-value-content"
  data-lego="react"
  style={Object {}}
>
  <abc-resource-view__attribute-value
    key="value"
  >
    foo
  </abc-resource-view__attribute-value>
  <ta-clipboard
    key="clipboard"
    mix={
      Object {
        "block": "abc-resource-view",
        "elem": "clipboard",
      }
    }
    scope={[Function]}
    text="foo"
    zIndexGroupLevel={26}
  />
</td>
`;

exports[`__AttributeValueContent Should support old value 1`] = `
<td
  className="ta-component abc-resource-view__attribute-value-content"
  data-lego="react"
  style={Object {}}
>
  <abc-resource-view__attribute-value
    key="value"
  >
    foo
  </abc-resource-view__attribute-value>
  <ta-clipboard
    key="clipboard"
    mix={
      Object {
        "block": "abc-resource-view",
        "elem": "clipboard",
      }
    }
    scope={[Function]}
    text="foo"
    zIndexGroupLevel={26}
  />
  <del>
    <abc-resource-view__attribute-value
      key="value"
    >
      bar
    </abc-resource-view__attribute-value>
    <ta-clipboard
      key="clipboard"
      mix={
        Object {
          "block": "abc-resource-view",
          "elem": "clipboard",
        }
      }
      scope={[Function]}
      text="bar"
      zIndexGroupLevel={26}
    />
  </del>
</td>
`;
